--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <span class="text-center">
     <h1 [innerText] = "portfolio.firstName + ' ' + portfolio.middleName[0] + '. ' + portfolio.lastName"></h1>
     <h2 class="subHeading" [innerText] = "portfolio.subHeading"></h2>
-    <img src="assets/img/Linked.jpg" class="rounded-circle mx-auto d-block smallerImg">
+    <img src="assets/img/Linked1.jpg" class="rounded-circle mx-auto d-block smallerImg">
   </span>
 
   <div class="row justify-content-center">
